# perceptia

./: .travis.yml  Cargo.toml  README.md  rustfmt.toml
cognitive/aesthetics/: Cargo.toml
cognitive/aesthetics/src/: aesthetics.rs  background.rs  cursor.rs  lib.rs  panels.rs
cognitive/cognitive/: Cargo.toml  cognitive.rs
cognitive/device_manager/: Cargo.toml
cognitive/device_manager/src/: device_access.rs  device_manager.rs  device_monitor.rs  drivers.rs  evdev_driver.rs  input_collector.rs  input_gateway.rs  ipc.rs  lib.rs  output_collector.rs  pageflip.rs  udev.rs  virtual_terminal.rs
cognitive/dharma/: Cargo.toml
cognitive/dharma/src/: dharma.rs  dispatcher.rs  event_loop.rs  signaler.rs  system.rs  timer.rs
cognitive/dharma/tests/: test_bridge.rs  test_event_loop.rs
cognitive/dharma/tests/common/: mocks.rs  mod.rs
cognitive/exhibitor/: Cargo.toml
cognitive/exhibitor/src/: compositor.rs  display.rs  exhibitor.rs  lib.rs  pointer.rs  strategies.rs  strategist.rs  surface_history.rs
cognitive/exhibitor/tests/: test_regressions_single_workspace.rs  test_simple_cases.rs  test_simple_docking.rs  test_simple_double_display_cases.rs
cognitive/exhibitor/tests/common/: configurations.rs  exhibitor_mixins.rs  mod.rs
cognitive/frames/: Cargo.toml
cognitive/frames/src/: converting.rs  frame.rs  lib.rs  packing.rs  representation.rs  searching.rs  settling.rs
cognitive/frames/tests/: test_frame_base.rs  test_frame_converting.rs  test_frame_displaying.rs  test_frame_packing.rs  test_frame_searching.rs  test_frame_settling.rs
cognitive/frames/tests/common/: assertions.rs  layouts.rs  surface_access_mock.rs
cognitive/graphics/: Cargo.toml
cognitive/graphics/src/: attributes.rs  egl_tools.rs  errors.rs  gbm_tools.rs  lib.rs
cognitive/inputs/: Cargo.toml
cognitive/inputs/src/: codes.rs  keyboard_state.rs  keymap.rs  lib.rs
cognitive/outputs/: Cargo.toml
cognitive/outputs/src/: drm_output.rs  lib.rs  output.rs  output_mock.rs  virtual_output.rs
cognitive/qualia/: Cargo.toml
cognitive/qualia/src/: configuration.rs  coordinator_mock.rs  defs.rs  enums.rs  env.rs  errors.rs  image.rs  input.rs  lib.rs  log.rs  macros.rs  memory.rs  output.rs  perceptron.rs  settings.rs  surface.rs  timing.rs  traits.rs
cognitive/qualia/tests/: test_defs.rs
cognitive/renderer_gl/: Cargo.toml
cognitive/renderer_gl/src/: cache_gl.rs  fragment.300.glsl  lib.rs  renderer_gl.rs
cognitive/renderer_pixmap/: Cargo.toml
cognitive/renderer_pixmap/src/: lib.rs  renderer_pixmap.rs
cognitive/timber/: Cargo.toml  timber.rs
cognitive/wayland_frontend/: Cargo.toml
cognitive/wayland_frontend/src/: engine.rs  event_handlers.rs  facade.rs  gateway.rs  lib.rs  proxy.rs
cognitive/wayland_frontend/src/protocol/: data_device_manager.rs  linux_dmabuf_v1.rs  mesa_drm.rs  shm.rs
info/: authors.md  concepts.md  configuration.md  contributing.md  installation.md  license.md  license.mit.txt  manifesto.md  manual.adoc  manual.perceptia.adoc  manual.perceptiactl.adoc
perceptia/aesthetics/: Cargo.toml  aesthetics.rs  panels.rs
perceptia/coordination/: Cargo.toml  context.rs  coordinator.rs  lib.rs  resource_storage.rs  surfaces.rs
perceptia/device_manager/: Cargo.toml  device_manager.rs  graphics_manager.rs  input_gateway.rs  lib.rs  output_collector.rs  pageflip.rs  udev.rs
perceptia/exhibitor/: Cargo.toml  compositor.rs  display.rs  exhibitor.rs  pointer.rs  strategies.rs
perceptia/exhibitor/tests/: test_regressions_single_workspace.rs  test_simple_cases.rs  test_simple_docking.rs  test_simple_double_display_cases.rs
perceptia/frames/: Cargo.toml  frame.rs  lib.rs  settling.rs
perceptia/gears/: Cargo.toml  binding_functions.rs  config.rs  config_defaults.rs  functions.rs  input_manager.rs  lib.rs
perceptia/graphics/: Cargo.toml  egl_tools.rs  (+1 more)
perceptia/output/: Cargo.toml  drm_output.rs  lib.rs
perceptia/perceptia/: Cargo.toml  aesthetics_module.rs  device_manager_module.rs  exhibitor_module.rs  perceptia.rs  virtualization_module.rs  wayland_service.rs
perceptia/perceptiactl/: Cargo.toml  about.rs  info.rs  perceptiactl.rs  screenshot.rs  verify_config.rs
perceptia/skylane_simple_framework/: Cargo.toml
perceptia/skylane_simple_framework/examples/: simple_dmabuf_intel.rs  simple_egl.rs
perceptia/skylane_simple_framework/src/: common.rs  controller.rs  event_handler.rs  lib.rs  listener.rs  proxy.rs  store.rs
perceptia/skylane_simple_framework/src/protocol/: callback.rs  linux_dmabuf_v1.rs  output.rs  registry.rs  shell.rs  shm.rs
perceptia/wayland_frontend/: Cargo.toml  engine.rs  facade.rs  gateway.rs  lib.rs  proxy.rs
perceptia/wayland_frontend/protocol/: linux_dmabuf_v1.rs  mesa_drm.rs  registry.rs  shm.rs  weston_screenshooter.rs
src/: perceptia.rs  rustfmt.toml
src/device_manager/: Cargo.toml  device_access.rs  device_manager.rs  device_manager_module.rs  device_monitor.rs  drivers.rs  evdev.rs  input_gateway.rs  lib.rs  output_collector.rs  pageflip.rs  udev.rs  virtual_terminal.rs
src/exhibitor/: Cargo.toml  compositor.rs  display.rs  exhibitor.rs  pointer.rs  strategies.rs  strategist.rs  surface_history.rs
src/exhibitor/tests/: test_regressions_single_workspace.rs  test_simple_cases.rs  test_simple_double_display_cases.rs
src/output/: Cargo.toml  drm_output.rs  gbm_tools.rs  lib.rs  output.rs
src/perceptia/: Cargo.toml  aesthetics_module.rs  device_manager_module.rs  exhibitor_module.rs  modules.rs  perceptia.rs  perceptron.rs  wayland_module.rs  wayland_service.rs
src/perceptiactl/: Cargo.toml  about.rs  info.rs  perceptiactl.rs  screenshot.rs  verify_config.rs
src/qualia/: Cargo.toml  binding_functions.rs  buffer.rs  config.rs  config_defaults.rs  context.rs  coordinator.rs  defs.rs  enums.rs  env.rs  errors.rs  functions.rs  graphics.rs  image.rs  input_manager.rs  ipc.rs  keyboard_state.rs  keymap.rs  lib.rs  log.rs  macros.rs  memory.rs  perceptron.rs  settings.rs  surface.rs  timing.rs  traits.rs  transfer.rs
src/qualia/tests/: test_defs.rs
src/skylane_protocols/: Cargo.toml  build.rs  lib.rs  wayland.xml
(+250 files in other folders)
