[package]
name = "cognitive-aesthetics"
version = "0.0.1"
description = "Aesthetic additions for `cognitive`"
documentation = "https://docs.rs/cognitive-aesthetics"
homepage = "https://github.com/perceptia/perceptia"
repository = "https://github.com/perceptia/perceptia"
keywords = ["cognitive"]
license = "MPL-2.0"
authors = ["Wojciech Kluczka <wojciech.kluczka@gmail.com>"]

[dependencies]
image = "0.12.3"
rusttype = "0.2.1"
timber = "0.0.1"
cognitive-qualia = "0.0.3"

[lib]
name = "cognitive_aesthetics"
path = "src/lib.rs"
