[package]
name = "cognitive-aesthetics"
version = "0.1.0"
description = "Aesthetic additions for `cognitive`"
documentation = "https://docs.rs/cognitive-aesthetics"
homepage = "https://github.com/perceptia/perceptia"
repository = "https://github.com/perceptia/perceptia"
keywords = ["cognitive"]
license = "MPL-2.0"
authors = ["Wojciech Kluczka <wojciech.kluczka@gmail.com>"]

[dependencies]
chrono = "0.3"
image = "0.12"
font-loader = "0.2"
rusttype = "0.2"
timber = "0.1"
cognitive-qualia = "0.1"

[lib]
name = "cognitive_aesthetics"
path = "src/lib.rs"
