[package]
name = "cognitive-device-manager"
version = "0.1.0"
description = "Device management for `cognitive`"
documentation = "https://docs.rs/cognitive-device-manager"
homepage = "https://github.com/perceptia/perceptia"
repository = "https://github.com/perceptia/perceptia"
keywords = ["udev", "cognitive"]
license = "MPL-2.0"
authors = ["Wojciech Kluczka <wojciech.kluczka@gmail.com>"]

[dependencies]
libc = "0.2"
nix = "0.8"
libudev-sys = "0.1"
libudev = "0.2"
drm-rs = "0.1"
egl = "0.2"
gbm-rs = "0.2"
dbus = "0.5"
dharma = "0.1"
timber = "0.1"
cognitive-graphics = "0.1"
cognitive-qualia = "0.1"
cognitive-inputs = "0.1"

[lib]
name = "cognitive_device_manager"
path = "src/lib.rs"
