[package]
name = "cognitive-graphics"
version = "0.1.0"
description = "Simple tools related to hardware graphics"
documentation = "https://docs.rs/cognitive-graphics"
homepage = "https://github.com/perceptia/perceptia"
repository = "https://github.com/perceptia/perceptia"
keywords = ["gl", "egl", "gbm"]
license = "MPL-2.0"
authors = ["Wojciech Kluczka <wojciech.kluczka@gmail.com>"]

[dependencies]
libc = "0.2"
gbm-rs = "0.2"
egl = "0.2"
gl = "0.6"

[lib]
name = "cognitive_graphics"
path = "src/lib.rs"
