[package]
name = "cognitive-inputs"
version = "0.0.1"
description = "Input related functionality for `cognitive`"
documentation = "https://docs.rs/cognitive-inputs"
homepage = "https://github.com/perceptia/perceptia"
repository = "https://github.com/perceptia/perceptia"
keywords = ["input"]
license = "MPL-2.0"
authors = ["Wojciech Kluczka <wojciech.kluczka@gmail.com>"]

[dependencies]
xkbcommon = "0.2"
uinput-sys = "0.1"
timber = "0.0.1"
cognitive-qualia = "0.0.1"

[lib]
name = "cognitive_inputs"
path = "src/lib.rs"
