[package]
name = "cognitive-outputs"
version = "0.0.2"
description = "Output related functionality for `cognitive`"
documentation = "https://docs.rs/cognitive-outputs"
homepage = "https://github.com/perceptia/perceptia"
repository = "https://github.com/perceptia/perceptia"
keywords = ["drm", "cognitive"]
license = "MPL-2.0"
authors = ["Wojciech Kluczka <wojciech.kluczka@gmail.com>"]

[features]
testing = []

[dependencies]
libc = "0.2.18"
drm-rs = "0.1.2"
gbm-rs = "0.2.0"
egl = "0.2.6"
dharma = "0.0.1"
timber = "0.0.1"
cognitive-graphics = "0.0.1"
cognitive-qualia = "0.0.3"
cognitive-renderer-gl = "0.0.2"

[lib]
name = "cognitive_outputs"
path = "src/lib.rs"
