[package]
name = "cognitive-outputs"
version = "0.1.0"
description = "Output related functionality for `cognitive`"
documentation = "https://docs.rs/cognitive-outputs"
homepage = "https://github.com/perceptia/perceptia"
repository = "https://github.com/perceptia/perceptia"
keywords = ["drm", "cognitive"]
license = "MPL-2.0"
authors = ["Wojciech Kluczka <wojciech.kluczka@gmail.com>"]

[features]
testing = []

[dependencies]
libc = "0.2"
drm-rs = "0.1"
gbm-rs = "0.2"
egl = "0.2"
cognitive-graphics = "0.1"
cognitive-qualia = "0.1"
cognitive-renderer-gl = "0.1"

[lib]
name = "cognitive_outputs"
path = "src/lib.rs"
