[package]
name = "cognitive-qualia"
version = "0.1.0"
description = "Basic definitions and traits for `cognitive`"
documentation = "https://docs.rs/cognitive-qualia"
homepage = "https://github.com/perceptia/perceptia"
repository = "https://github.com/perceptia/perceptia"
keywords = ["cognitive"]
license = "MPL-2.0"
authors = ["Wojciech Kluczka <wojciech.kluczka@gmail.com>"]

[features]
testing = []

[dependencies]
bitflags = "0.8"
backtrace = "0.3"
libc = "0.2"
libudev = "0.2"
nix = "0.8"
time = "0.1"
serde = "0.9"
serde_derive = "0.9"
dharma = "0.1"
timber = "0.1"
cognitive-graphics = "0.1"

[lib]
name = "cognitive_qualia"
path = "src/lib.rs"
