[package]
name = "cognitive-wayland-frontend"
version = "0.0.1"
description = "Wayland frontend for `cognitive`"
documentation = "https://docs.rs/cognitive-wayland-frontend"
homepage = "https://github.com/perceptia/perceptia"
repository = "https://github.com/perceptia/perceptia"
keywords = ["wayland", "cognitive"]
license = "MPL-2.0"
authors = ["Wojciech Kluczka <wojciech.kluczka@gmail.com>"]

[dependencies]
nix = "0.8.0"
drm-rs = "0.1.2"
skylane = "0.1.2"
skylane_protocols = "0.1.2"
dharma = "0.0.1"
timber = "0.0.1"
cognitive-graphics = "0.0.1"
cognitive-qualia = "0.0.3"
cognitive-inputs = "0.0.3"

[lib]
name = "cognitive_wayland_frontend"
path = "src/lib.rs"
