[package]
name = "gears"
version = "0.0.1"
authors = ["Wojciech Kluczka <wojciech.kluczka@gmail.com>"]

[dependencies]
libc = "0.2.18"
uinput-sys = "0.1"
yaml-rust = "0.3"
serde = "0.9"
serde_yaml = "0.6"
dharma = "0.0.1"
timber = "0.0.1"
cognitive-qualia = "0.0.3"

[lib]
name = "gears"
path = "lib.rs"
