[package]
name = "output"
version = "0.0.1"
authors = ["Wojciech Kluczka <wojciech.kluczka@gmail.com>"]

[dependencies]
libc = "0.2.18"
drm-rs = "0.1.2"
gbm-rs = "0.2.0"
egl = "0.2.6"
dharma = "0.0.1"
timber = "0.0.1"
cognitive-graphics = "0.0.1"
cognitive-qualia = "0.0.1"
renderer_gl = { path = "../renderer_gl" }

[lib]
name = "output"
path = "lib.rs"
