[package]
name = "perceptia"
version = "0.0.1"
authors = ["Wojciech Kluczka <wojciech.kluczka@gmail.com>"]

[dependencies]
dharma = "0.0.1"
timber = "0.0.1"
cognitive-qualia = "0.0.3"
cognitive-inputs = "0.0.3"
cognitive-outputs = "0.0.2"
cognitive-aesthetics = "0.0.1"
cognitive-device-manager = "0.0.2"
cognitive-exhibitor = "0.0.1"
cognitive-wayland-frontend = "0.0.1"
gears = { path = "../gears" }
coordination = { path = "../coordination" }

[[bin]]
name = "perceptia"
path = "perceptia.rs"
