[package]
name = "perceptia"
version = "0.5.0"
authors = ["Wojciech Kluczka <wojciech.kluczka@gmail.com>"]

[dependencies]
dharma = "0.1"
timber = "0.1"
cognitive-qualia = "0.1"
cognitive-inputs = "0.1"
cognitive-outputs = "0.1"
cognitive-aesthetics = "0.1"
cognitive-device-manager = "0.1"
cognitive-exhibitor = "0.1"
cognitive-wayland-frontend = "0.1"
gears = { path = "../gears" }
coordination = { path = "../coordination" }

[[bin]]
name = "perceptia"
path = "perceptia.rs"
