[package]
name = "perceptiactl"
version = "0.0.1"
authors = ["Wojciech Kluczka <wojciech.kluczka@gmail.com>"]

[dependencies]
clap = "2.19.3"
egl = "0.2.6"
gl = "0.6.0"
nix = "0.8.0"
libudev = "0.2.0"
drm-rs = "0.1.2"
image = "0.12.3"
timber = "0.0.1"
qualia                   = { path = "../qualia" }
graphics                 = { path = "../graphics" }
device_manager           = { path = "../device_manager" }
skylane_simple_framework = { path = "../skylane_simple_framework" }

[[bin]]
name = "perceptiactl"
path = "perceptiactl.rs"
