[package]
name = "perceptiactl"
version = "0.5.0"
authors = ["Wojciech Kluczka <wojciech.kluczka@gmail.com>"]

[dependencies]
chrono = "0.3.1"
clap = "2.19"
egl = "0.2"
gl = "0.6"
nix = "0.8"
libudev = "0.2"
drm-rs = "0.1"
image = "0.12"
timber = "0.1"
cognitive-graphics = "0.1"
cognitive-qualia = "0.1"
cognitive-device-manager = "0.1"
gears = { path = "../gears" }
skylane_simple_framework = { path = "../skylane_simple_framework" }

[[bin]]
name = "perceptiactl"
path = "perceptiactl.rs"
