[package]
name = "wayland_frontend"
version = "0.0.1"
authors = ["Wojciech Kluczka <wojciech.kluczka@gmail.com>"]

[dependencies]
nix = "0.8.0"
drm-rs = "0.1.2"
skylane = "0.1.2"
skylane_protocols = "0.1.2"
dharma = "0.0.1"
timber = "0.0.1"
qualia = { path = "../qualia" }
coordination = { path = "../coordination" }

[lib]
name = "wayland_frontend"
path = "lib.rs"
