[package]
name = "device_manager"
version = "0.0.1"
authors = ["Wojciech Kluczka <wojciech.kluczka@gmail.com>"]

[dependencies]
libudev = "0.2.0"
nix = "0.6.0"
drm-rs = "0.1.2"
uinput-sys = "0.1.5"
timber = { path = "../timber" }
dharma = { path = "../dharma" }
qualia = { path = "../qualia" }

[lib]
name = "device_manager"
path = "lib.rs"

