[package]
name = "device_manager"
version = "0.0.1"
authors = ["Wojciech Kluczka <wojciech.kluczka@gmail.com>"]

[dependencies]
libudev = "0.2.0"
nix = "0.8.0"
libc = "0.2.18"
drm-rs = "0.1.2"
uinput-sys = "0.1.5"
timber = { path = "../timber" }
dharma = { path = "../dharma" }
qualia = { path = "../qualia" }
graphics = { path = "../graphics" }
coordination = { path = "../coordination" }

[lib]
name = "device_manager"
path = "lib.rs"

