[package]
name = "output"
version = "0.0.1"
authors = ["Wojciech Kluczka <wojciech.kluczka@gmail.com>"]

[dependencies]
libc = "0.2.16"
drm-rs = "0.1.2"
gbm-rs = "0.2.0"
egl = "0.2.6"
timber = { path = "../timber" }
dharma = { path = "../dharma" }
qualia = { path = "../qualia" }
renderer_gl = { path = "../renderer_gl" }

[lib]
name = "output"
path = "lib.rs"

