[package]
name = "perceptia"
version = "0.0.1"
authors = ["Wojciech Kluczka <wojciech.kluczka@gmail.com>"]

[dependencies]
timber         = { path = "../timber" }
dharma         = { path = "../dharma" }
qualia         = { path = "../qualia" }
device_manager = { path = "../device_manager" }

[[bin]]
name = "perceptia"
path = "perceptia.rs"

