[package]
name = "perceptiactl"
version = "0.0.1"
authors = ["Wojciech Kluczka <wojciech.kluczka@gmail.com>"]

[dependencies]
clap = "2.19.3"
egl = "0.2.6"
gl = "0.6.0"
nix = "0.7.0"
libudev = "0.2.0"
drm-rs = "0.1.2"
timber         = { path = "../timber" }
qualia         = { path = "../qualia" }
device_manager = { path = "../device_manager" }
renderer_gl    = { path = "../renderer_gl" }
output         = { path = "../output" }

[[bin]]
name = "perceptiactl"
path = "perceptiactl.rs"

