[package]
name = "qualia"
version = "0.0.1"
authors = ["Wojciech Kluczka <wojciech.kluczka@gmail.com>"]

[dependencies]
bitflags = "0.7"
backtrace = "0.2"
dbus = "0.4"
libc = "0.2"
libudev = "0.2"
nix = "0.7"
time = "0.1"
xkbcommon = "0.2"
uinput-sys = "0.1"
timber = { path = "../timber" }
dharma = { path = "../dharma" }

[lib]
name = "qualia"
path = "lib.rs"

