[package]
name = "qualia"
version = "0.0.1"
authors = ["Wojciech Kluczka <wojciech.kluczka@gmail.com>"]

[dependencies]
bitflags = "0.8"
backtrace = "0.3"
dbus = "0.5"
libc = "0.2"
libudev = "0.2"
nix = "0.8"
time = "0.1"
xkbcommon = "0.2"
uinput-sys = "0.1"
yaml-rust = "0.3"
serde = "0.9"
serde_derive = "0.9"
serde_yaml = "0.6"
timber = { path = "../timber" }
dharma = { path = "../dharma" }

[lib]
name = "qualia"
path = "lib.rs"

