[package]
name = "skylane_protocols"
version = "0.0.1"
authors = ["Wojciech Kluczka <wojciech.kluczka@gmail.com>"]
build = "build.rs"

[dependencies]
byteorder = "1.0"
skylane = { path = "../skylane" }

[build-dependencies]
skylane_scanner = { path = "../skylane_scanner" }

[lib]
name = "skylane_protocols"
path = "lib.rs"

